Updated to new logo

--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -12,9 +12,8 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/logo"
-            android:width="192dp"
-            android:height="192dp"/>
+            android:src="@drawable/google"
+        />
     </item>
 
 </layer-list>
